--- a/src/components/Form/index.scss
+++ b/src/components/Form/index.scss
@@ -7,7 +7,7 @@
     h1 {
         font-size: 20px;
         margin: 10px 0 30px 0;
-        font-family: LatoLight;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     input {
         border: none;
@@ -21,10 +21,10 @@
         margin-top: 20px;
         width: 200px;
         color: white;
-        background: #2ebaf0;
+        background: #0a0a0a;
         border: none;
         padding: 15px 10px;
         font-size: 14px;
-        font-family: LatoLight;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 }
