--- a/src/components/List/index.scss
+++ b/src/components/List/index.scss
@@ -45,7 +45,7 @@
     cursor: pointer;
     position: relative;
     font-size: 16px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
     padding-left: 35px;
     line-height: 20px;
@@ -75,8 +75,8 @@
     }
     &-active {
         &:before {
-            background-color: #4b60a1;
-            border: 1px solid #4b60a1;
+            background-color: #000000;
+            border: 1px solid #030303;
         }
     }
 }
