--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -1,81 +1,76 @@
 .app {
-    display: flex;
-    height: calc(100vh - 100px);
-    width: calc(100vw - 100px);
-    flex-direction: column;
-    align-items: center;
-    background: #bac1d1;
-    padding: 50px;
+  display: flex;
+  height: calc(100vh - 100px);
+  width: calc(100vw - 100px);
+  flex-direction: column;
+  align-items: center;
+  background: #bac1d1;
+  padding: 50px;
 
-    @media only screen and (max-width: 961px) {
-        height: 100vh;
-        width: 100vw;
-        padding: 0;
-    }
+  @media only screen and (max-width: 961px) {
+    height: 100vh;
+    width: 100vw;
+    padding: 0;
+  }
 }
 
 .app-box {
-    height: 100%;
-    width: 100%;
-    position: relative;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
+  max-width: 700px;
+  background: white;
+
+  @media only screen and (max-width: 961px) {
+    max-width: inherit;
+  }
+
+  .app-header {
+    top: 10%;
     display: flex;
-    flex-direction: column;
-    min-height: 500px;
-    max-width: 700px;
-    background: white;
-
-    @media only screen and (max-width: 961px) {
-        max-width: inherit;
+    height: 170px;
+    width: calc(100%- 50px);
+    align-items: top;
+    justify-content: start;
+    padding: 10px;
+    color: hsl(0, 0%, 100%);
+    background: url("../../images/sujith-devanagari-JGzkiJqvk0I-unsplash.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    .app-title {
+      top: 50%;
+      font-size: 3em;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      border-radius: 10px;
+      font-weight: lighter;
     }
-
-    .app-header {
-        top: 10%;
-        display: flex;
-        height: 170px;
-        width: calc(100%-50px);
-        align-items: top;
-        justify-content: start;
-        padding: 10px;
-        color: hsl(0, 0%, 100%);
-        background: url('../../images/sujith-devanagari-JGzkiJqvk0I-unsplash.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        .app-title {
-            top: 50%;
-            font-size: 3em;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            border-radius: 10px;
-            font-weight: lighter;
-            
-        }
-        
-    }
+  }
 }
 
-
-.app-footer { 
-    display: flex;
-    height: 15px;
-    width: calc(100%-50px);
-    background-color: #020202;
-    color: #ffff;
-    align-items: center;
-    justify-content: start;
-    border-top: #c93030;
-    
-   
-
+.app-footer {
+  display: flex;
+  height: 15px;
+  width: calc(100%- 50px);
+  background-color: #020202;
+  color: #ffff;
+  align-items: center;
+  justify-content: start;
+  border-top: #c93030;
 }
 .footer-title {
-    bottom: 20%;
-    
-    font-size: 0.5em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    font-weight:lighter;
-   
-    width: calc(100%-100px);
-  
-    text-align: center;
+  bottom: 20%;
 
+  font-size: 0.5em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  font-weight: lighter;
+
+  width: calc(100%- 100px);
+
+  text-align: center;
 }
