--- a/src/components/Form/index.scss
+++ b/src/components/Form/index.scss
@@ -1,30 +1,32 @@
 .form-container {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    h1 {
-        font-size: 20px;
-        margin: 10px 0 30px 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-    input {
-        border: none;
-        border-bottom: 1px solid #e1e1e1;
-        width: 50%;
-        height: 30px;
-        outline: none;
-        font-size: 16px;
-    }
-    button {
-        margin-top: 20px;
-        width: 200px;
-        color: white;
-        background: #0a0a0a;
-        border: none;
-        padding: 15px 10px;
-        font-size: 14px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  h1 {
+    font-size: 20px;
+    margin: 10px 0 30px 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  input {
+    border: none;
+    border-bottom: 1px solid #e1e1e1;
+    width: 50%;
+    height: 30px;
+    outline: none;
+    font-size: 16px;
+  }
+  button {
+    margin-top: 20px;
+    width: 200px;
+    color: white;
+    background: #0a0a0a;
+    border: none;
+    padding: 15px 10px;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
 }
