--- a/src/components/List/Row/index.scss
+++ b/src/components/List/Row/index.scss
@@ -1,60 +1,60 @@
 .row {
+  display: flex;
+  height: 10px;
+  width: 100%;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 20px 0;
+  border-bottom: 1px solid #d8cfcf;
+  background: white;
+
+  .button {
+    border-radius: 50%;
+    color: white;
+  }
+  .button-check {
     display: flex;
-    height: 10px;
-    width: 100%;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    border: 1px solid #e1e1e1;
+    margin-right: 15px;
+    font-size: 12px;
+    justify-content: center;
     align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 20px 0;
-    border-bottom: 1px solid #d8cfcf;
-    background: white;
-      
-    
-    .button {
-        border-radius: 50%;
-        color: white;
+    &--complete {
+      background: #0a0a0a;
+      border: 1px solid #020202;
     }
-    .button-check {
-        display: flex;
-        height: 20px;
-        width: 20px;
-        text-align: center;
-        border: 1px solid #e1e1e1;
-        margin-right: 15px;
-        font-size: 12px;
-        justify-content: center;
-        align-items: center;
-        &--complete {
-            background: #0a0a0a;
-            border: 1px solid #020202;
-        }
-        &--incomplete {
-            background: rgb(231, 226, 226);
-        }
+    &--incomplete {
+      background: rgb(231, 226, 226);
     }
-    span {
-        flex: 1;
-        text-align: justify;
-        word-break: break-all;
-    }
+  }
+  span {
+    flex: 1;
+    text-align: justify;
+    word-break: break-all;
+  }
 }
 
 .settings {
+  display: flex;
+  button,
+  a {
     display: flex;
-    button, a {
-        display: flex;
-        height: 20px;
-        width: 20px;
-        justify-content: center;
-        align-items: center;
-        margin-left: 15px;
-        border: none;
-        font-size: 12px;
-    }
-    .button-edit {
-        background: #d39f51;
-    }
-    .button-remove {
-        background: #f11a0a;
-    }
+    height: 20px;
+    width: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15px;
+    border: none;
+    font-size: 12px;
+  }
+  .button-edit {
+    background: #d39f51;
+  }
+  .button-remove {
+    background: #f11a0a;
+  }
 }
