--- a/src/components/List/index.scss
+++ b/src/components/List/index.scss
@@ -1,82 +1,85 @@
 .list-container {
-    display: flex;
-    height: calc(1005-150px);
-    overflow: auto;
-    flex: 1;
-    flex-direction: column;
+  display: flex;
+  height: calc(1005- 150px);
+  overflow: auto;
+  flex: 1;
+  flex-direction: column;
 }
 
 .list-settings {
-    padding: 30px 30px 0 30px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
-    input {
-        font-size: 16px;
-        border: 0;
-        border-bottom: 1px solid #e1e1e1;
-        outline: none;
-        padding: 5px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin-bottom: 20px;
-    }
+  padding: 30px 30px 0 30px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  input {
+    font-size: 16px;
+    border: 0;
+    border-bottom: 1px solid #e1e1e1;
+    outline: none;
+    padding: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    margin-bottom: 20px;
+  }
 }
 
 .list {
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  margin: 0;
 
-    @media only screen and (max-width: 961px) {
-        padding: 30px 30px 60px 30px;
-    }
+  @media only screen and (max-width: 961px) {
+    padding: 30px 30px 60px 30px;
+  }
 }
 
 .radio-buttons-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .radio-button {
-    cursor: pointer;
-    position: relative;
-    font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-    padding-left: 35px;
-    line-height: 20px;
-    input {
-        display: none;
-    }
-    span {
-        display: inline-block;
-        width: auto;
-    }
-    &:first-child, &:nth-child(2) {
-        margin-right: 15px;
-    }
+  cursor: pointer;
+  position: relative;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  padding-left: 35px;
+  line-height: 20px;
+  input {
+    display: none;
+  }
+  span {
+    display: inline-block;
+    width: auto;
+  }
+  &:first-child,
+  &:nth-child(2) {
+    margin-right: 15px;
+  }
+  &:before {
+    content: "";
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin: 0;
+    position: absolute;
+    left: 2px;
+    bottom: 2px;
+    border: none;
+    border-radius: 20px;
+    background-color: #e1e1e1;
+    border: 1px solid #e1e1e1;
+  }
+  &-active {
     &:before {
-        content: "";
-        display: inline-block;
-        width: 14px;
-        height: 14px;
-        margin: 0;
-        position: absolute;
-        left: 2px;
-        bottom: 2px;
-        border: none;
-        border-radius: 20px;
-        background-color: #e1e1e1;
-        border: 1px solid #e1e1e1;
+      background-color: #000000;
+      border: 1px solid #030303;
     }
-    &-active {
-        &:before {
-            background-color: #000000;
-            border: 1px solid #030303;
-        }
-    }
+  }
 }
